# youtube-automation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: agent_prompts.json  image_prompts.json  script_prompts.json  settings.json  tone_library.json  youtube_config.json
docs/: AGENT_VERIFICATION_SYSTEM.md  API_ALLOCATION_BY_STAGE.md  API_LIMITS.md  CONSOLIDATION_SUMMARY.md  CURSOR_IMPLEMENTATION_GUIDE.md  DESIGN_VALIDATION_TEST.md  DOCUMENTATION_ROADMAP.md  OLLAMA_BASELINE.md  PRE_STAGE_3_VERIFICATION_CHECKLIST.md  README.md  README_DOCUMENTATION_INDEX.md  ROLLBACK_PROCEDURES.md  STAGE_1_EXECUTION_PLAN.md  STAGE_2_CURSOR_PROMPTS.md  STAGE_2_MOCK_DATA_GENERATOR.md  STAGE_2_TO_STAGE_3_ALIGNMENT_ANALYSIS.md  STAGE_3_COMPREHENSIVE_REVIEW_SUMMARY.md  STAGE_3_CURSOR_PROMPTS_UPDATED_SUMMARY.md  STAGE_3_CURSOR_PROMPT_SESSION_1_UPDATED.md  STAGE_3_DOCUMENTATION_INDEX.md  STAGE_3_EXECUTION_PLAN.md  STAGE_3_FIXES_AND_CLARIFICATIONS.md  STAGE_3_GAP_ANALYSIS_AND_FIXES.md  STAGE_3_IMPLEMENTATION_GUIDE.md  STAGE_3_QUICK_START.md  STAGE_3_START_HERE.md  STAGE_3_TROUBLESHOOTING.md  STAGE_4_EXECUTION_PLAN.md  STAGE_TRANSITIONS_AND_GATES.md  TONE_LIBRARY.md  TROUBLESHOOTING.md  WORKFLOW.md
scripts/: monitor.py  run_stage_1.py  setup.sh  test_apis.py
src/: __init__.py
tests/: __init__.py  test_agent_verifier.py  test_api_setup.py  test_image_generator.py  test_llm_gateway_keys.py  test_orchestrator.py  test_script_generator.py  test_tone_manager.py  test_tts_handler.py  test_video_assembler.py  test_video_pipeline.py  test_youtube_integration.py
(+50 files in other folders)
