[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-automation"
version = "1.0.0"
description = "Automated YouTube faceless video generation with cost optimization"
readme = "README.md"
requires-python = ">=3.11"
# LLM keychain helper: sibling ../llm_gateway (https://github.com/atutorial5891-design/llm_gateway)
# or `pip install -e ../llm_gateway` so `secrets_manager` is importable; see src/utils/llm_keys.py.
dependencies = [
    "keyring>=25",
    "anthropic",
    "google-api-python-client>=2.92.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-storage",
    "google-cloud-texttospeech>=2.13.0",
    "librosa>=0.10.0",
    "moviepy>=1.0.3",
    "ollama",
    "openai>=1.3.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
